--- a/.github/workflows/build-trigger.yml
+++ b/.github/workflows/build-trigger.yml
@@ -3,8 +3,6 @@ name: React app deployement
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
@@ -15,4 +13,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Deploy react app to github pages
+      env:
+        REACT_APP_BACKEND_URL: ${{ secrets.REACT_APP_BACKEND_URL }}
+        REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
       uses: tanwanimohit/deploy-react-to-ghpages@v1.0.1
